[gd_scene load_steps=3 format=3 uid="uid://typing_display_component"]

[ext_resource type="Script" path="res://ui/components/typing_display.gd" id="1_script"]
[ext_resource type="Theme" path="res://themes/KeyboardDefenseTheme.tres" id="2_theme"]

[node name="TypingDisplay" type="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DrillTitle" type="Label" parent="Content"]
layout_mode = 2
horizontal_alignment = 1
text = "Drill Title"

[node name="DrillHint" type="Label" parent="Content"]
layout_mode = 2
horizontal_alignment = 1
text = "Hint text appears here"

[node name="WordDisplay" type="HBoxContainer" parent="Content"]
layout_mode = 2
alignment = 1

[node name="TypedLabel" type="Label" parent="Content/WordDisplay"]
layout_mode = 2
text = ""

[node name="CurrentChar" type="Label" parent="Content/WordDisplay"]
layout_mode = 2
text = ""

[node name="RemainingLabel" type="Label" parent="Content/WordDisplay"]
layout_mode = 2
text = ""

[node name="FeedbackLabel" type="Label" parent="Content"]
layout_mode = 2
horizontal_alignment = 1
text = ""
